style: display latitude and longitude separately

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Location</string>
+    <string name="location_continuously">Get Location Continuously</string>
+    <string name="longitude">Longitude: </string>
+    <string name="latitude">Latitude: </string>
 </resources>
