feat: get location single time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="location_continuously">Get Location Continuously</string>
     <string name="longitude">Longitude: </string>
     <string name="latitude">Latitude: </string>
+    <string name="location_one_time">Get Location One Time</string>
 </resources>
