--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,9 @@
     <string name="walking">Walking</string>
     <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
     <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
+    <string name="location_info">Location Information</string>
+    <string name="country">Country:</string>
+    <string name="state">State:</string>
+    <string name="city">City:</string>
 
 </resources>
