--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="country">Country:</string>
     <string name="state">State:</string>
     <string name="city">City:</string>
+    <string name="location_activities">Your Activities</string>
 
 </resources>
